@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3174 2019/07/31 19:31:13 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3175 2019/07/31 19:32:49 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5131,3 +5131,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-gdata to 2.18.0 [brook 2019-07-31]
 	Updated cad/qcad to 3.23.0.0 [plunky 2019-07-31]
 	Updated math/R-genetics to 1.3.8.1.2 [brook 2019-07-31]
+	Updated math/R-geoR to 1.7.5.2.1 [brook 2019-07-31]
